@@ -15,8 +15,6 @@ import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.ZonedDateTime;
 import java.util.*;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import javax.validation.constraints.NotNull;
@@ -59,6 +57,7 @@ import de.tum.in.www1.artemis.repository.*;
 import de.tum.in.www1.artemis.repository.metis.ConversationParticipantRepository;
 import de.tum.in.www1.artemis.repository.metis.conversation.ChannelRepository;
 import de.tum.in.www1.artemis.repository.metis.conversation.ConversationRepository;
+import de.tum.in.www1.artemis.security.SecurityUtils;
 import de.tum.in.www1.artemis.service.*;
 import de.tum.in.www1.artemis.service.dto.StudentDTO;
 import de.tum.in.www1.artemis.service.dto.UserDTO;
@@ -481,27 +480,30 @@ public class CourseTestService {
         mockDelegate.mockCreateGroupInUserManagement(course1.getDefaultEditorGroupName());
         mockDelegate.mockCreateGroupInUserManagement(course1.getDefaultInstructorGroupName());
 
-        var student = userRepo.findOneWithGroupsAndAuthoritiesByLogin(userPrefix + "student1").get();
+        var student = userRepo.findOneByLogin(userPrefix + "student1").get();
         mockDelegate.mockAddUserToGroupInUserManagement(student, course1.getDefaultStudentGroupName(), false);
 
-        var instructor1 = userRepo.findOneWithGroupsAndAuthoritiesByLogin(userPrefix + "instructor1").get();
+        var instructor1 = userRepo.findOneByLogin(userPrefix + "instructor1").get();
         mockDelegate.mockAddUserToGroupInUserManagement(instructor1, course1.getDefaultInstructorGroupName(), false);
 
         var result = request.getMvc().perform(buildCreateCourse(course1)).andExpect(status().isCreated()).andReturn();
-        course1 = objectMapper.readValue(result.getResponse().getContentAsString(), Course.class);
-        assertThat(courseRepo.findByIdElseThrow(course1.getId())).isNotNull();
-        CountDownLatch latch1 = new CountDownLatch(1);
-        request.postWithoutLocation("/api/courses/" + course1.getId() + "/students/" + userPrefix + "student1", null, HttpStatus.OK, null);
-        request.postWithoutLocation("/api/courses/" + course1.getId() + "/instructors/" + userPrefix + "instructor1", null, HttpStatus.OK, null);
-        latch1.await(5, TimeUnit.SECONDS);
+        Course course2 = objectMapper.readValue(result.getResponse().getContentAsString(), Course.class);
+        assertThat(courseRepo.findByIdElseThrow(course2.getId())).isNotNull();
+
+        request.postWithoutLocation("/api/courses/" + course2.getId() + "/students/" + userPrefix + "student1", null, HttpStatus.OK, null);
+        request.postWithoutLocation("/api/courses/" + course2.getId() + "/instructors/" + userPrefix + "instructor1", null, HttpStatus.OK, null);
+
         // Check if all default channels are created
-        var channels = channelRepository.findChannelsByCourseId(course1.getId());
-        assertThat(channels).hasSize(DefaultChannelType.values().length);
-        channels.forEach(channel -> assertThat(Arrays.stream(DefaultChannelType.values()).map(DefaultChannelType::getName)).contains(channel.getName()));
-        // Check if newly added instructor and student was added to default channels
-        channels.forEach(channel -> {
-            var participants = conversationParticipantRepository.findConversationParticipantByConversationId(channel.getId());
-            assertThat(participants).hasSize(2); // 1 instructor and 1 student
+        await().untilAsserted(() -> {
+            SecurityUtils.setAuthorizationObject();
+            var channels = channelRepository.findChannelsByCourseId(course2.getId());
+            assertThat(channels).hasSize(DefaultChannelType.values().length);
+            channels.forEach(channel -> assertThat(Arrays.stream(DefaultChannelType.values()).map(DefaultChannelType::getName)).contains(channel.getName()));
+            // Check if newly added instructor and student was added to default channels
+            channels.forEach(channel -> {
+                var participants = conversationParticipantRepository.findConversationParticipantByConversationId(channel.getId());
+                assertThat(participants).hasSize(2); // 1 instructor and 1 student
+            });
         });
 
     }
@@ -932,7 +934,7 @@ public class CourseTestService {
 
         // Perform the request that is being tested here
         List<CourseForDashboardDTO> coursesForDashboard = request.getList("/api/courses/for-dashboard", HttpStatus.OK, CourseForDashboardDTO.class);
-        List<Course> courses = coursesForDashboard.stream().map(CourseForDashboardDTO::course).collect(Collectors.toList());
+        List<Course> courses = coursesForDashboard.stream().map(CourseForDashboardDTO::course).toList();
 
         Course activeCourse = coursesCreated.get(0);
         Course inactiveCourse = coursesCreated.get(1);
